# malmo

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  changelog.txt  index.html  malmo.properties
ALE_ROMS/: CMakeLists.txt  readme.md
Malmo/: CMakeLists.txt  launch_minecraft_in_background.py
Malmo/humanAction/: App.config  App.xaml  App.xaml.cs  CMakeLists.txt  CurriculumDialog.xaml  CurriculumDialog.xaml.cs  CurriculumItem.xaml  CurriculumItem.xaml.cs  GamepadState.cs  HighScoreWindow.xaml  HighScoreWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MalmoHumanAction.csproj  MalmoHumanAction.csproj.pre  MalmoHumanAction.sln  NameDialog.xaml  NameDialog.xaml.cs  PreferencesDialog.xaml  PreferencesDialog.xaml.cs  RecordWindow.xaml  RecordWindow.xaml.cs  Score.cs
Malmo/humanAction/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
Malmo/samples/: CMakeLists.txt
Malmo/samples/CSharp_examples/: CMakeLists.txt  Program.cs  RunMission.cs  RunMission.csproj  RunMission.csproj.in  RunMission.csproj.pre  RunMission.sln  animation_test.cs  default_world_test.cs  hit_test.cs  template.csproj.in  template.csproj.pre  tutorial_1.cs  tutorial_2.cs  tutorial_3.cs  tutorial_4.cs  tutorial_4_solved.cs  tutorial_5.cs  tutorial_5_solved.cs  tutorial_7.cs  tutorial_8.cs
Malmo/samples/Cpp_examples/: CMakeLists.txt  CMakeLists.txt.in  run_mission.cpp
Malmo/samples/Go_examples/: agent_visibility.go  minimal.go  run_mission.go  tutorial_1.go  tutorial_2.go  tutorial_3.go  tutorial_4.go  tutorial_4_solved.go  tutorial_5.go  tutorial_5_solved.go  tutorial_6.go  tutorial_6.xml  tutorial_7.go  tutorial_8.go
Malmo/samples/Java_examples/: CMakeLists.txt  JavaExamples_run_mission.java
Malmo/samples/Lua_examples/: CMakeLists.txt  run_mission.lua  to_string_test.lua
Malmo/samples/Python_examples/: ALE_HAC.py  Braitenberg.py  CMakeLists.txt  MazeRunner.py  MultiMaze.py  Overclock_Test.py  Render_Speed_Test.py  Tutorial.odt  Untitled-1  agent_visibility_test.py  animation_test.py  block_type_test.py  braitenberg_simulation.py  build_test.py  cart_test.py  chat_reward.py  mob_fun.py  (+51 more)
Malmo/src/: ALEAgentHost.cpp  ALEAgentHost.h  AgentHost.cpp  AgentHost.h  ArgumentParser.cpp  ArgumentParser.h  BmpFrameWriter.cpp  BmpFrameWriter.h  CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  ClientInfo.cpp  ClientInfo.h  ClientPool.cpp  ClientPool.h  ErrorCodeSync.cpp  ErrorCodeSync.h  FindSchemaFile.cpp  FindSchemaFile.h  Init.cpp  Init.h  Logger.cpp  Logger.h  MissionEndedXML.cpp  MissionEndedXML.h  MissionInitSpec.cpp  MissionInitSpec.h  MissionInitXML.cpp  MissionInitXML.h  MissionRecord.cpp  MissionRecord.h  MissionRecordSpec.cpp  MissionRecordSpec.h  MissionSpec.cpp  MissionSpec.h  ParameterSet.cpp  ParameterSet.h  PosixFrameWriter.cpp  PosixFrameWriter.h  RewardXML.cpp  (+30 more)
Malmo/test/: CMakeLists.txt
Minecraft/: CMakeLists.txt  Minecraft_Client.launch  Minecraft_Server.launch  README.txt  build.gradle  launchClient.bat  launchClient.sh  launchClient_quiet.sh  launch_minecraft_in_background.py
Minecraft/run/: options.txt  readme 2.txt  usercache.json  usernamecache.json
Schemas/: CMakeLists.txt  MinecraftBlocks.txt  MinecraftItems.txt  Mission.xsd  Mission.xsd.in  MissionEnded.xsd  MissionEnded.xsd.in  MissionHandlers.xsd  MissionHandlers.xsd.in  MissionInit.xsd  MissionInit.xsd.in  Types.xsd  Types.xsd.in  items.json  links.xml  missionhandlers.tex
doc/: CMakeLists.txt  Doxyfile.in  build_linux.md  build_macosx.md  build_ubuntu_minimal_python_and_golang.md  build_windows.md  client_state_machine.dot  cmake_readme.md  install_linux.md  install_macosx.md  install_readme.md  install_windows.md  install_windows_manual.md  jar_readme.md  readme.html  server_state_machine.dot
sample_missions/: CMakeLists.txt  MalmoMissionTable_CurrentTasks_2016_06_14.docx  cliff_walking_1-trace-and-video.tgz  cliff_walking_1.xml  default_flat_1-trace-and-video.tgz  default_flat_1.xml  default_mission.xml  default_world_1-trace-and-video.tgz  default_world_1.xml  eating_1-trace-and-video.tgz  eating_1.xml  inventory_handlers.xml  language_library_chat.xml  navigation.xml  readme.md  roommaze.xml  sample_missions_loader.py  tricky_arena_1-trace-and-video.tgz  tricky_arena_1.tgz  tricky_arena_1.xml  validate.py
sample_missions/classroom/: attic-trace-and-video.tgz  attic.xml  basic-trace-and-video.tgz  basic.xml  complexity_usage-trace-and-video.tgz  complexity_usage.tgz  complexity_usage.xml  hard.xml  medium-trace-and-video.tgz  medium.xml  obstacles-trace-and-video.tgz  obstacles.xml  simpleMaze.xml  simpleRoomMaze-trace-and-video.tgz  simpleRoomMaze.xml  specification_usage.xml  vertical-trace-and-video.tgz  vertical.xml
sample_missions/mazes/: maze_1-trace-and-video.tgz  maze_1.xml  maze_2-trace-and-video.tgz  maze_2.xml
scripts/: CMakeLists.txt  ci_install_ubuntu14.04.sh  ci_ubuntu14.04.sh  malmo_build.ps1  malmo_build.sh  malmo_install.ps1
scripts/docker/: build.sh  build_centos7_python3.dockerfile  build_centos_python2.dockerfile  build_centos_python3.dockerfile  build_console_ubuntu1604_python3.dockerfile  build_debian7_python2.dockerfile  build_debian7_python3.dockerfile  build_debian8_python2.dockerfile  build_debian8_python2.sh  build_debian8_python3.dockerfile  build_debian8_python3.sh  build_debian9_python3.dockerfile  build_fedora26_python2.dockerfile  build_fedora26_python3.dockerfile  build_ubuntu1404_python2.dockerfile  build_ubuntu1404_python2.sh  build_ubuntu1404_python3.dockerfile  build_ubuntu1404_python3.sh  build_ubuntu1604_python2.dockerfile  build_ubuntu1604_python2.sh  build_ubuntu1604_python3.dockerfile  build_ubuntu1804_python3.dockerfile  console_startup.sh  install_console_ubuntu1604_python3.dockerfile  manylinux.dockerfile  manylinux_py36.dockerfile  xfce4-desktop.xml  xpra.conf
scripts/pslib/: malmo_lib.psm1
scripts/python-wheel/: HOWTO  README  README.md  linux_macos_wheel.sh  windows_wheel.bat
scripts/scoring/: score.py
scripts/tools/: CMakeLists.txt  depth_map_parser.py  frame_rate_plotter.py  readme.md
(+1113 files in other folders)
